Move the refresh button for the controller attributes to the left to prevent overlay with scrollbar.

--- a/hawkbit-ui/src/main/resources/VAADIN/themes/hawkbit/customstyles/others.scss
+++ b/hawkbit-ui/src/main/resources/VAADIN/themes/hawkbit/customstyles/others.scss
@@ -318,6 +318,6 @@
   #target\.attributes\.update {
     position: absolute;
     top: 12px;
-    right: 6px;
+    right: 10px;
   }
 }
